--- a/src/template.html
+++ b/src/template.html
@@ -8,10 +8,15 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button id="home">Home</button>
+            <button id="menu">Menu</button>
+            <button id="about">About</button>
         </nav>
     </header>
+    <div id="content">
+    </div>
+    <footer>
+        <p>Photo by <a href="https://unsplash.com/@alexkurchev?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Oleksandr Kurchev</a> on <a href="https://unsplash.com/photos/kitchen-filled-with-cooking-pans-and-kitchen-utensils-9gtiGV76NnM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+    </footer>
 </body>
 </html>
